--- a/VCS_Farm/standard_data/templates/standard_data/standard_input.html
+++ b/VCS_Farm/standard_data/templates/standard_data/standard_input.html
@@ -1,12 +1,16 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Nhập dữ liệu chuẩn</title>
-    {% load static %}
+{% extends 'base.html' %}
+{% load static %}
+
+{% block title %}Nhập dữ liệu chuẩn - VCS Farm{% endblock %}
+
+{% block css %}
+    {{ block.super }}
     <link rel="stylesheet" href="{% static 'css/standard_input.css' %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-</head>
-<body class="container mt-5">
+{% endblock %}
+
+{% block content %}
+<div class="container mt-5">
     <h2>Nhập dữ liệu chuẩn</h2>
 
     {% if latest_record %}
@@ -29,5 +33,5 @@
         {{ form.as_p }}
         <button type="submit" class="btn btn-primary">Lưu</button>
     </form>
-</body>
-</html>
+</div>
+{% endblock %}
